fix: change API endpoint to use Vercel proxy for CORS

--- a/public/publish-simple.html
+++ b/public/publish-simple.html
@@ -111,7 +111,8 @@
     </div>
 
     <script>
-      const API = "https://mp.miyucaicai.cn/coze/publish-complete";
+      // 用Vercel的代理API，避免跨域
+      const API = "/api/publish";
       const APPID = "wx8410119dfbb7f756";
       const SECRET = "3c93e33e087e57b906f5c341aa5223b9";
 
