在首页添加IP白名单配置指导

--- a/index.html
+++ b/index.html
@@ -698,13 +698,13 @@
           <h4>🎨 模板展示</h4>
           <p>查看所有可用的文章模板，选择最适合的排版样式</p>
         </a>
+        <a href="IP_WHITELIST_CHECKLIST.md" class="action-card" target="_blank">
+          <h4>🔒 IP白名单配置</h4>
+          <p>配置微信公众号IP白名单，确保API调用正常</p>
+        </a>
         <a href="docs/help.html" class="action-card">
           <h4>📖 使用文档</h4>
           <p>详细的使用指南和API文档，快速上手各项功能</p>
-        </a>
-        <a href="https://github.com/OpenAISpace/ai-trend-publish" class="action-card" target="_blank">
-          <h4>💻 GitHub项目</h4>
-          <p>查看源代码，提交Issue，参与项目开发</p>
         </a>
       </div>
     </section>
@@ -845,6 +845,7 @@
             <li><a href="mailto:liuyaowen_smile@126.com">Email联系</a></li>
             <li><a href="https://github.com/OpenAISpace/ai-trend-publish/issues">问题反馈</a></li>
             <li><a href="COMPLETE_WECHAT_GUIDE.md">微信API文档</a></li>
+            <li><a href="IP_WHITELIST_CHECKLIST.md">IP白名单配置</a></li>
           </ul>
         </div>
       </div>
